<resources>
    <string name="app_name">NewNotes</string>
    <string name="app_designed_by">Designed by ZhuKun</string>

    <string name="ok">好的</string>
    <string name="cancel">取消</string>
    <string name="sure">确认</string>

    <!-- Main -->
    <string name="tab_title_main_1">卡片</string>
    <string name="tab_title_main_2">对话框</string>
    <string name="tab_title_main_3">控件</string>

    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>
    <!-- Main -->

    <!-- Card -->
    <string name="main_card_title">标题在这里</string>
    <string name="main_card_title_short">标题</string>
    <string name="main_card_details">副标题</string>
    <string name="main_card_subtitle">详细信息</string>
    <string name="main_card_button_1">按钮 1</string>
    <string name="main_card_button_2">按钮 2</string>
    <string name="main_flat_button_1_clicked">平面按钮 1</string>
    <string name="main_flat_button_2_clicked">平面按钮 2</string>
    <string name="hello_blank_fragment">你好空白片段</string>
    <!-- Card -->

    <!-- Dialog -->
    <string name="simple_dialog">简单对话框</string>
    <string name="dialog_rounded_shape">圆角对话框</string>
    <string name="main_dialog_simple_title">有标题的简单对话框</string>
    <string name="main_dialog_single_choice">单选对话框</string>
    <string name="main_dialog_multi_choice">多选对话框</string>
    <string name="main_dialog_progress_title">进度条对话框...</string>
    <string name="main_dialog_progress">进度条对话框</string>
    <string name="main_dialog_data_picker">日期选择对话框</string>
    <string name="main_dialog_data_time">时间选择对话框</string>
    <string name="main_dialog_bottom">底部对话框</string>
    <string name="main_dialog_fullscreen">全屏对话框</string>
    <string name="main_popup_menu">Popup Menu</string>
    <string name="main_dialog_simple_message">材料的比拟是合理空间和运动系统的统一理论。
        \n这种材料以触觉现实为基础，灵感来源于纸和油墨的研究，
        但技术先进，具有开放的想象力和神奇性。</string>
    <!-- Dialog -->

    <!-- Widget -->
    <string name="main_widget_toggle_button">切换按钮</string>
    <string name="main_widget_switch">开关</string>
    <string name="main_widget_check_box">复选框</string>
    <string name="main_widget_check_box_1">复选框 1</string>
    <string name="main_widget_check_box_2">复选框 2</string>
    <string name="main_widget_check_box_3">复选框 3</string>
    <string name="main_widget_radio">单选按钮</string>
    <string name="main_widget_radio_button_1">单选按钮 1</string>
    <string name="main_widget_radio_button_2">单选按钮 2</string>
    <string name="main_widget_radio_button_3">单选按钮 3</string>
    <string name="main_widget_seek_bar">拖动条</string>
    <string name="main_widget_progress_bar">进度条</string>
    <string name="main_widget_extract_edit_text">提取编辑文本</string>
    <string name="main_widget_text_input_layout">文字输入布局</string>
    <string name="main_widget_edit_text">编辑文字</string>
    <string name="main_widget_spinner">下拉框</string>
    <string name="main_widget_data_picker">日期选择器</string>
    <string name="main_widget_time_picker">时间选择器</string>
    <string name="about_card1_welcome_message">嗨！很高兴见到你！</string>
    <string name="main_widget_material_button">材质按钮</string>
    <string name="main_widget_chip">芯片</string>
    <string name="main_widget_chip_1">可勾选</string>
    <string name="main_widget_chip_2">行程</string>
    <string name="main_widget_chip_3">角半径</string>
    <string name="main_widget_chip_4">芯片图标</string>
    <string name="main_widget_chip_5">关闭图标</string>
    <!-- Widget -->

    <!-- About -->
    <string name="about_google_play">评价 (Google play)</string>
    <string name="about_email">反馈 (E-mail)</string>
    <string name="about_git_hub">源代码 (GitHub)</string>
    <string name="about_address">中国, 浙江, 杭州, 西湖区</string>
    <string name="about_source_licenses">开源许可</string>
    <string name="share_with">分享方式</string>
    <string name="title_activity_about">关于</string>
    <string name="about_version">版本:</string>
    <string name="about_email_intent">关于:新笔记</string>
    <string name="about_not_found_email">没有邮件程序</string>
    <string name="nav_about">关于</string>
    <string name="label_about">关于</string>
    <string name="about_google_play_error">对不起，该APP未上架Google play</string>
    <string name="feature_is_not_completed">对不起，该功能未完成。</string>
    <string name="author">Zhu Kun</string>
    <string name="author_email">zk199519@gmail.com</string>
    <!-- About -->

    <!-- Scrolling -->
    <string name="label_scrolling">Scrolling</string>
    <string name="large_text">
        材料就是比喻。        
        \n\n物质隐喻是合理化空间和运动系统的统一理论。    
        材料以触觉现实为基础，受到纸张和墨水研究的启发，    
        技术先进，对想象力和魔力开放。        
        \n材料的表面和边缘提供了基于现实的视觉线索。        
        使用熟悉的触觉属性可以帮助用户快速了解可用性。然而，       
        材料的灵活性创造了新的能力，取代了物理上的人
        世界，没有违反物理规则。
        \n光，表面和运动的基本原理是传达物体运动方式的关键，
        互动，存在于空间和彼此之间。现实的灯光显示
        接缝，划分空间，并指示移动部件。
        \n\n大胆，图形，有意。
        \n\n基于印刷的设计排版，网格，空间，比例，颜色的基本要素，
        并使用图像引导视觉处理。这些元素远远超过了取悦
        眼睛。他们创造了等级，意义和焦点。有意识的颜色选择，边缘到边缘
        图像，大规模排版和有意识的白色空间创造了一个大胆的图形
        让用户沉浸在体验中的界面。
        \n强调用户行为使核心功能立即显现并提供
        用户的航点。
        \n\nMotion提供了意义。
        \n\nMotion尊重并强化用户作为主要推动者。主要用户操作是
        引发运动的拐点，改变了整个设计。
        \n所有操作都在一个环境中进行。对象在没有”的情况下呈现给用户
        即使他们改造和重组，也会打破经验的连续性。
        \n运动是有意义和适当的，有助于集中注意力并保持连续性。
        反馈是微妙但清晰的。过渡是有效但连贯的。
        \n\n3D世界。
        \n\n物质环境是一个3D空间，这意味着所有对象都有x，y和z
        尺寸.z轴与显示器平面垂直对齐，
        正z轴向观察者延伸。每张材料占据一个
        沿z轴的位置，标准厚度为1dp。
        \n在网络上，z轴用于分层，而不是用于透视.3D世界是
        通过操纵y轴来模拟。
        \n\n光与影。
        \n\n在物质环境中，虚拟灯照亮了场景。关键灯创造了
        定向阴影，而环境光从各个角度创建柔和阴影。
        \n物质环境中的阴影由这两个光源投射。在Android中
        发展时，当光源被材料片阻挡时会出现阴影
        沿z轴的各种位置。在网络上，通过操纵”描绘阴影
        仅限y轴。以下示例显示了高度为6dp的卡片。
        \n\n升高海拔。
        \n\n所有材料对象，无论大小，都有静止高程或默认高程
        这不会改变。如果一个物体改变了高度，它应该回到它的静止状态
        尽快升高。
        \n\n组件高程。
        \n\n组件类型的静止高程在应用程序中保持一致（例如，FAB高程
        从一个应用程序中的6dp到另一个应用程序中的16dp不等。
        \n组件可能在平台上有不同的静止高程，具体取决于深度
        环境（例如，电视的深度比移动或桌面更深）。
        \n\n响应性高程和动态高程偏移。
        \n\n某些组件类型具有响应性提升，这意味着它们会在响应中更改高程
        用户输入（例如，正常，聚焦和按下）或系统事件。这些提升
        使用动态高程偏移一致地实现了变化。
        \n动态高程偏移是组件向相对移动的目标高度
        对于组件的静止状态。它们确保高程变化是一致的
        跨行动和组件类型。例如，所有按下电梯的组件都有
        相对于它们的静止高度，相同的高度变化。
        \n输入事件完成或取消后，组件将返回静止状态
        海拔
        \n\n避免高程干扰。
        \n\n具有响应性高程的组件在它们之间移动时可能会遇到其他组件
        他们的静止高度和动态高程偏移。</string>
    <!-- Scrolling -->

    <!-- nav -->
    <string name="nav_secondary_list">Secondary List</string>
    <string name="nav_recycler_view">Recycler View</string>
    <string name="nav_box_view">柜体平面图</string>
    <string name="nav_scrolling">Scrolling</string>
    <string name="nav_fullscreen">全屏</string>
    <string name="nav_bottom_navigation">底部导航栏</string>
    <string name="nav_settings">设置</string>
    <string name="nav_bottom_appbar">底部 App Bar</string>
    <!-- nav -->


    <!-- Settings -->
    <string name="action_settings">设置</string>
    <string name="settings_category_basic">基本设置</string>
    <string name="settings_category_advanced">高级设置</string>
    <string name="settings_category_other">其他设置</string>
    <string name="title_activity_settings">设置</string>
    <string name="settings_switch_preference_title">切换首选项</string>
    <string name="settings_switch_preference_summary">切换首选项描述</string>
    <string name="settings_check_box_preference_title">复选框首选项</string>
    <string name="settings_edit_text_preference_title">编辑文本首选项</string>
    <string name="settings_edit_text_preference_default_value">材料设计</string>
    <string name="settings_list_preference_dialog_title">列出首选项</string>
    <string name="settings_list_preference_title">列出首选项</string>
    <string name="settings_multi_select_list_preference_dialog_title">多选列表首选项</string>
    <string name="settings_multi_select_list_preference_title">多选列表首选项</string>
    <string name="settings_preference_click_title">在首选项单击侦听器</string>
    <string name="settings_preference_click_to_activity">点击跳转Activity</string>
    <string name="pref_title_system_sync_settings">账户同步设置</string>
    <string name="pref_title_new_message_notifications">消息通知</string>
    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">静音</string>
    <string name="pref_title_vibrate">震动</string>
    <string name="pref_on_preference_click">onPreferenceClick</string>
    <!-- Settings -->

    <!-- login -->
    <string name="label_login">登陆</string>
    <string name="prompt_email">电子邮件</string>
    <string name="prompt_password">密码（可选）</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_email">此电子邮件地址无效</string>
    <string name="error_invalid_password">此密码太短</string>
    <string name="error_incorrect_password">此密码不正确</string>
    <string name="error_field_required">这是必填栏</string>
    <string name="permission_rationale">提供电子邮件需要联系人权限落成。</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="register">注册</string>
    <string name="qq">QQ</string>
    <string name="i_am_qq">I\'M QQ \n每一天 \n乐在沟通</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_user_id_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="google_sign_in_button_label">Sign in with Google</string>
    <string name="username_help_text">Forgot username? | Use phone app to sign in</string>
    <!-- login -->

    <!-- recycle View -->
    <string name="label_recycler_view">Recycler View</string>
    <string name="item_swipe_dismissed">已删除</string>
    <string name="item_swipe_undo">撤销</string>
    <string name="tv_recycler_item_1">下拉刷新</string>
    <string name="tv_recycler_item_2">左右滑动删除条目</string>
    <string name="tv_recycler_item_3">上下拖动改变条目位置</string>
    <!-- recycle View -->

    <string name="label_share_view">分享视图</string>
    <string name="share_view_press_it">你可以点按它</string>

    <string name="change_bottom_bar_text">更改底部工具栏属性：</string>
    <string name="right_align">居右</string>
    <string name="zero_radius">无圆角</string>
    <string name="zero_margin">无边距</string>
    <string name="show_title">显示标题</string>
    <string name="login">登陆</string>

</resources>
