<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".activity.SettingsTwoActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/card_spacing"
                android:clickable="false"
                android:foreground="@drawable/ripple"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/medium_spacing"
                        android:paddingTop="@dimen/medium_spacing"
                        android:text="@string/settings_category_basic"
                        android:textColor="@color/md_blue_A200"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                    <com.notes.zk.newnotes.view.SettingWithSwitchView
                        android:id="@+id/setting_two_switch_sw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="@{onClickListener}"
                        app:settingCaption="@string/settings_switch_preference_summary"
                        app:settingIconBackground="@drawable/ic_apps_black_24dp"
                        app:settingTitle="@string/settings_switch_preference_title"
                        app:settingDefaultValue="true"/>

                    <com.notes.zk.newnotes.view.SettingBasic
                        android:id="@+id/setting_two_tv_sb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="@{onClickListener}"
                        app:settingCaption="@string/settings_edit_text_preference_title"
                        app:settingIconBackground="@drawable/ic_settings_black_24dp"
                        app:settingTitle="@string/settings_edit_text_preference_title" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/card_spacing"
                android:clickable="false"
                android:foreground="@drawable/ripple"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/medium_spacing"
                        android:paddingTop="@dimen/medium_spacing"
                        android:text="@string/settings_category_advanced"
                        android:textColor="@color/md_blue_A200"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                    <com.notes.zk.newnotes.view.SettingBasic
                        android:id="@+id/setting_two_list_sb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="@{onClickListener}"
                        app:settingCaption="@string/settings_list_preference_title"
                        app:settingIconBackground="@drawable/ic_more_horiz_black_24dp"
                        app:settingTitle="@string/settings_list_preference_dialog_title"
                        app:settingDefaultValue="true"/>

                    <com.notes.zk.newnotes.view.SettingBasic
                        android:id="@+id/setting_two_multi_select_list_sb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="@{onClickListener}"
                        app:settingCaption="@string/settings_multi_select_list_preference_title"
                        app:settingIconBackground="@drawable/ic_format_list_bulleted_black_24dp"
                        app:settingTitle="@string/settings_multi_select_list_preference_title" />


                </LinearLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>
</layout>