<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_main_1_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_card_margin_horizontal"
        android:layout_marginTop="@dimen/main_card_margin_vertical"
        android:layout_marginEnd="@dimen/main_card_margin_horizontal"
        android:layout_marginBottom="@dimen/main_card_margin_vertical"
        android:background="?attr/selectableItemBackground"
        android:foreground="?attr/selectableItemBackground"
        card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
        card_view:cardElevation="@dimen/card_recycler_elevation"
        android:onClick="@{onClickListener}">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/main_card_1_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/material_design_2" />

            <TextView
                android:id="@+id/card_main_1_title_tv"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_card_1_iv"
                android:layout_marginStart="@dimen/card_title_margin"
                android:layout_marginTop="@dimen/card_title_margin_top"
                android:layout_marginEnd="@dimen/card_title_margin"
                android:text="@string/main_card_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/card_main1_subtitle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_main_1_title_tv"
                android:layout_marginStart="@dimen/card_subtitle_margin"
                android:layout_marginTop="@dimen/card_button_margin"
                android:layout_marginEnd="@dimen/card_subtitle_margin"
                android:layout_marginBottom="@dimen/card_subtitle_margin"
                android:text="@string/main_card_subtitle" />

            <Button
                android:id="@+id/card_main1_action1_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_main1_subtitle_tv"
                android:layout_margin="@dimen/card_button_margin"
                android:text="@string/main_card_button_1"
                android:textColor="@color/colorAccent"
                android:onClick="@{onClickListener}"/>

            <Button
                android:id="@+id/card_main1_action2_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_main1_subtitle_tv"
                android:layout_marginTop="@dimen/card_button_margin"
                android:layout_marginBottom="@dimen/card_button_margin"
                android:layout_toEndOf="@id/card_main1_action1_btn"
                android:text="@string/main_card_button_2"
                android:textColor="@color/colorAccent"
                android:onClick="@{onClickListener}"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</layout>